#165 [REFACTOR] repository 단에서 정보 가공해서 넘기는 쪽으로 기능 변경